# SmartCalc_v2.0

./: README.md
src/: CMakeLists.txt  Makefile  readme.html  resourses.qrc
src/controller/: controller.h
src/model/: model.cc  model.h  token.h
src/tests/: test.cc
src/view/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  style.qss
